--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,10 @@ name: Rust
 on:
   push:
     branches: [ "main" ]
+    tags: '**'
   pull_request:
     branches: [ "main" ]
+    tags: '**'
 
 env:
   CARGO_TERM_COLOR: always
