--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,11 +2,15 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
-    tags: v**
+    branches: 
+      - 'main'
+    tags: 
+      - v**
   pull_request:
-    branches: [ "main" ]
-    tags: v**
+    branches: 
+      - 'main'
+    tags: 
+      - v**
   workflow_dispatch:
 
 env:
